add destroy ticket if not valid excavator info

--- a/app/assets/stylesheets/tikets.sass
+++ b/app/assets/stylesheets/tikets.sass
@@ -17,6 +17,11 @@
   .tiket
     padding: 30px
     background: #ddfbda
+    font-size: 1.2em
+
+.tikets-show 
+  min-height: 100vh
+  background: #ddfbda
 
 .tikets-index
   .tikets
@@ -31,7 +36,19 @@
     margin: 30px 0
     box-shadow: 0 0 10px 5px #4e4e4e
 
+.tikets-show
+  .excavator
+      width: 45%
+      float: right
+      padding: 30px
+      font-size: 1.2em
+
+  .tiket
+    width: 45%
+    display: inline-block
+
 #map
   position: relative
-  width: 100%
   height: 500px
+  border: solid
+  margin: 30px
