--- a/app/views/excavators/_excavator.html.haml
+++ b/app/views/excavators/_excavator.html.haml
@@ -1,10 +1,10 @@
 .excavator
   .title
-    %h3 Excavator
+    %h3 Excavator:
   .info
     %p
       %span
-        Company name
+        Company name:
       = excavator.company_name
     %p
       %span
