Add styles for back button

--- a/app/views/tikets/show.html.haml
+++ b/app/views/tikets/show.html.haml
@@ -3,5 +3,5 @@
   = render 'tiket', tiket: @tiket, lot: false
   = render 'excavators/excavator', excavator: @excavator
   #map
-
-  = link_to 'Back', tikets_path
+  .back
+    = link_to 'Back', tikets_path
