--- a/app/assets/stylesheets/tikets.sass
+++ b/app/assets/stylesheets/tikets.sass
@@ -52,3 +52,13 @@
   height: 500px
   border: solid
   margin: 30px
+
+.tikets-show .back a
+  margin-left: 50%
+  font-size: 1.5em
+  padding: 10px 30px
+  background: #000000
+  color: aliceblue
+
+.tikets-show .back a:hover
+  background: #383333
