changed styles for index

--- a/app/assets/stylesheets/tikets.sass
+++ b/app/assets/stylesheets/tikets.sass
@@ -6,6 +6,10 @@
   margin: 0
   padding: 0
 
+.tikets-index
+  min-height: 100vh
+  background: silver
+
 .tikets-index, .tikets-show
   h1
     text-align: center
@@ -55,6 +59,7 @@
 
 .tikets-show .back a
   margin-left: 50%
+  transform: translateX(-50%)
   font-size: 1.5em
   padding: 10px 30px
   background: #000000
